feat: add wildcard key _

--- a/example_configs/config_example1.yaml
+++ b/example_configs/config_example1.yaml
@@ -59,7 +59,7 @@ layers:
     k0: "exec xdotool mousemove 0 0"
 # another layer for arrows and some other keys
 - name: arrows
-  passThrough: true
+  passThrough: false
   bindings:
     e: up
     s: left
@@ -69,3 +69,5 @@ layers:
     w: backspace
     r: delete
     v: enter
+    # _ is the wildcard key, which matches any key that is not mapped
+    _: rightalt+_
