feat: add quickTapTime to hold the tap key when pressed twice

--- a/example_configs/config_example1.yaml
+++ b/example_configs/config_example1.yaml
@@ -19,6 +19,9 @@ startMouseSpeed: 0.0
 mouseDecelerationTime: 300.0
 mouseDecelerationCurve: 3.0
 
+# enables auto-repeat of a tap key when pressed twice within this duration
+quickTapTime: 150
+
 # the rest of the config defines the layers with their bindings
 layers:
 # the first layer is active at start
